# deepfake-facial-segmentation-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: 00_check_env.py  01_filtrar_wider.py  02_generar_dataset_prueba.py  03_generar_dataset_rostros.py  04_face_parsing_bisenet.py  05_generar_local_avanzado.py  06_generar_faceswap_avanzado.py  07_plot_comparacion_dataset.py
