[project]
name = "tesis-dataset"
version = "0.1.0"
description = "Generador de dataset sintetico para segmentacion facial deepfake con FaceSwap e Inpainting"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas",
    "tqdm",
    "matplotlib",
    "pillow",
    "scipy",
    "scikit-image",

    "torch",
    "torchvision",
    "torchaudio",

    "facexlib",
    "basicsr",
    "insightface==0.7.3",
    "onnxruntime-gpu",

    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "huggingface-hub",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true